Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-89650

Can not build Qt 6 with cmake and MSVC 2019 16.8.3 due to cborinternal_p.h error: _cvtss_sh identifier not found

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.0.1, 6.1.0 Alpha
    • 6.0.0
    • Core: I/O
    • None
    • Windows
    • cbdf2ba46aed53d002b90d4d9683c28306f8e0a9 (qt/qtbase/dev) 684f26caad745d04dfc85fa4c850e13ea57a4a84 (qt/qtbase/6.0)

      I'm trying to build Qt 6.0 on MSVC with Visual Studio 2019 v19.8.3 using a cmake-based configuration (without the configure script). I disable all AVX512 options, but enable all SSE, AVX and AVX2 options. The build fails after a while with error:

      FAILED: qtbase/src/corelib/CMakeFiles/Core.dir/serialization/qcborstreamreader.cpp.obj 
      C:\PROGRA~2\MICROS~1\2019\COMMUN~1\VC\Tools\MSVC\1428~1.293\bin\Hostx64\x64\cl.exe   /TP -DCore_EXPORTS -DPCRE2_CODE_UNIT_WIDTH=16 -DPCRE2_STATIC -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_CORE_LIB -DQT_CORE_QOBJECT_LIB -DQT_DEPRECATED_WARNINGS -DQT_DEPRECATED_WARNINGS_SINCE=0x060000 -DQT_DISABLE_DEPRECATED_BEFORE=0x040800 -DQT_MOC_COMPAT -DQT_NO_FOREACH -DQT_NO_USING_NAMESPACE -DQT_USE_QSTRINGBUILDER -DUNICODE -DWIN32 -DWIN64 -D_ENABLE_EXTENDED_ALIGNED_STORAGE -D_UNICODE -D_USE_MATH_DEFINES -D_WIN64 -Iqtbase\src\corelib\Core_autogen\include -Iqtbase\include -Iqtbase\include\QtCore -I..\qtbase\src\corelib -Iqtbase\src\corelib -Iqtbase\src\corelib\global -I..\qtbase\src\corelib\..\3rdparty\tinycbor\src -Iqtbase\include\QtCore\6.0.0 -Iqtbase\include\QtCore\6.0.0\QtCore -Iqtbase\src\corelib\.rcc -I..\qtbase\mkspecs\win32-msvc -I..\qtbase\src\3rdparty\pcre2\src -IC:\data\stable-artifacts-MSVC-Haswell-7-x64-cl19.28.29335\Debug\include /MDd /Zi /arch:AVX2 /DWINVER=0x0603 /D_WIN32_WINNT=0x0603     /D_ITERATOR_DEBUG_LEVEL=0 /D_CRT_SECURE_NO_DEPRECATE /D_SILENCE_ALL_CXX17_DEPRECATION_WARNINGS    /DWIN32 /D_WINDOWS /GR /EHsc /Zi   /RTC1 -MDd /W3 -Zc:__cplusplus -permissive- -utf-8 -FS -Zc:rvalueCast -Zc:inline -Zc:strictStrings -Zc:throwingNew -Zc:referenceBinding -Zc:externConstexpr -Zc:wchar_t -std:c++17 /YuC:/data/tmp/qt/x64/qtbase/src/corelib/CMakeFiles/Core.dir/cmake_pch.hxx /FpC:/data/tmp/qt/x64/qtbase/src/corelib/CMakeFiles/Core.dir/./cmake_pch.cxx.pch /FIC:/data/tmp/qt/x64/qtbase/src/corelib/CMakeFiles/Core.dir/cmake_pch.hxx /showIncludes /Foqtbase\src\corelib\CMakeFiles\Core.dir\serialization\qcborstreamreader.cpp.obj /Fdqtbase\src\corelib\CMakeFiles\Core.dir\ /FS -c ..\qtbase\src\corelib\serialization\qcborstreamreader.cpp
      Microsoft (R) C/C++ Optimizing Compiler Version 19.28.29335 for x64
      Copyright (C) Microsoft Corporation.  All rights reserved.
      C:\data\tmp\qt\qtbase\src\3rdparty\tinycbor\src\cborinternal_p.h(44): error C3861: '_cvtss_sh': identifier not found
      C:\data\tmp\qt\qtbase\src\3rdparty\tinycbor\src\cborinternal_p.h(48): error C3861: '_cvtsh_ss': identifier not found
      

      My full list of cmake options is:

      -DCMAKE_BUILD_TYPE=Debug -DCMAKE_INSTALL_LIBDIR=lib -DCMAKE_INSTALL_DATADIR=lib -DCMAKE_FIND_USE_PACKAGE_REGISTRY=OFF -DCMAKE_POSITION_INDEPENDENT_CODE=ON -DCMAKE_VERBOSE_MAKEFILE=ON -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCMAKE_CUDA_COMPILER=nvcc.exe -DBUILD_SHARED_LIBS=ON -DBUILD_SUBMODULES=qtbase;qtsvg;qttools;qtdeclarative;qtquickcontrols2 -DBUILD_EXAMPLES=OFF -DBUILD_TESTING=OFF -DFEATURE_avx=ON -DFEATURE_avx2=ON -DFEATURE_avx512bw=OFF -DFEATURE_avx512cd=OFF -DFEATURE_avx512dq=OFF -DFEATURE_avx512er=OFF -DFEATURE_avx512f=OFF -DFEATURE_avx512ifma=OFF -DFEATURE_avx512pf=OFF -DFEATURE_avx512vbmi=OFF -DFEATURE_avx512vl=OFF -DFEATURE_cups=OFF -DFEATURE_cupsjobwidget=OFF -DFEATURE_designer=ON -DFEATURE_developer_build=OFF -DFEATURE_doubleconversion=ON -DFEATURE_dtls=OFF -DFEATURE_f16c=ON -DFEATURE_freetype=ON -DFEATURE_fscompleter=OFF -DFEATURE_gif=OFF -DFEATURE_hijricalendar=OFF -DFEATURE_icu=ON -DFEATURE_imageformat_bmp=OFF -DFEATURE_imageformat_jpeg=ON -DFEATURE_imageformat_png=ON -DFEATURE_islamiccivilcalendar=OFF -DFEATURE_jalalicalendar=OFF -DFEATURE_journald=OFF -DFEATURE_jpeg=ON -DFEATURE_kms=OFF -DFEATURE_largefile=ON -DFEATURE_libproxy=OFF -DFEATURE_linguist=OFF -DFEATURE_localserver=OFF -DFEATURE_mips_dsp=OFF -DFEATURE_mips_dspr2=OFF -DFEATURE_movie=OFF -DFEATURE_mtdev=OFF -DFEATURE_networkproxy=OFF -DFEATURE_openssl=ON -DFEATURE_png=ON -DFEATURE_precompile_header=OFF -DFEATURE_printdialog=OFF -DFEATURE_printer=OFF -DFEATURE_printpreviewdialog=OFF -DFEATURE_printpreviewwidget=OFF -DFEATURE_qml_xml_http_request=OFF -DFEATURE_quicktemplates2_hover=OFF -DFEATURE_quicktemplates2_multitouch=OFF -DFEATURE_rdrnd=ON -DFEATURE_rdseed=ON -DFEATURE_reduce_exports=OFF -DFEATURE_reduce_relocations=OFF -DFEATURE_socks5=OFF -DFEATURE_sql=OFF -DFEATURE_sql_db2=OFF -DFEATURE_sql_ibase=OFF -DFEATURE_sql_mysql=OFF -DFEATURE_sql_oci=OFF -DFEATURE_sql_odbc=OFF -DFEATURE_sql_psql=OFF -DFEATURE_sql_sqlite=OFF -DFEATURE_sqlmodel=OFF -DFEATURE_sse2=ON -DFEATURE_sse3=ON -DFEATURE_sse4_1=ON -DFEATURE_sse4_2=ON -DFEATURE_ssl=ON -DFEATURE_sspi=OFF -DFEATURE_ssse3=ON -DFEATURE_style_stylesheet=ON -DFEATURE_syslog=OFF -DFEATURE_system_doubleconversion=ON -DFEATURE_system_freetype=ON -DFEATURE_system_jpeg=ON -DFEATURE_system_png=ON -DFEATURE_system_proxies=OFF -DFEATURE_system_sqlite=ON -DFEATURE_system_textmarkdownreader=OFF -DFEATURE_system_zlib=ON -DFEATURE_textmarkdownreader=OFF -DFEATURE_textmarkdownwriter=OFF -DFEATURE_textodfwriter=OFF -DFEATURE_tuiotouch=OFF -DFEATURE_udpsocket=OFF -DFEATURE_vnc=OFF -DFEATURE_vsp2=OFF -DFEATURE_zstd=ON
      

      Does that mean anything to anyone? Google did not show any helpful results. Help would be greatly appreciated!

        For Gerrit Dashboard: QTBUG-89650
        # Subject Branch Project Status CR V

            thiago Thiago Macieira
            emmenlau Mario Emmenlauer
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes