Update TinyCBOR

Updated to commit e6a4fa4862bcc3a6f6b07cf9d9b784d0ab6068b4.

Fixes: QTBUG-89650
Task-number: QTBUG-90214
Change-Id: I6edce5101800424a8093fffd15cdf6591cbf809d
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>
(cherry picked from commit cbdf2ba46aed53d002b90d4d9683c28306f8e0a9)
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>